<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="bioInfo"
            type="com.ayush.bio.data.Bio" />
    </data>
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FF5722"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="150dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:contentDescription="@string/image_description"
            app:srcCompat="@drawable/ayush" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@{bio.name}"
            style="@style/nameStyle" />

        <EditText
            android:id="@+id/enter_hobbies"
            style="@style/nameStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hobby_hint_text"
            android:autofillHints="@string/auto_fill_hints"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/done_button"
            style="@style/nameStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/done_text" />

        <TextView
            android:id="@+id/textview_hobbies"
            style="@style/nameStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:text="@{bio.hobbies}"/>

        <ScrollView
            style="@android:style/Widget.Holo.Light.ScrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView2"
                style="@style/nameStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:fontFamily="sans-serif"
                android:lineSpacingMultiplier="1.9"
                android:padding="20dp"
                android:text="@string/bio"
                android:textSize="20sp" />
        </ScrollView>
    </androidx.appcompat.widget.LinearLayoutCompat>

</layout>
